--- a/levels/level1.css
+++ b/levels/level1.css
@@ -47,10 +47,24 @@ body {
     width: 100%;
     height: 20%;
     margin-right: 7px;
+    margin-top: -440px;
 }
+
+.dialog_images {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.dialog_images img{
+    width: 80%;
+    height: 80%;
+    margin-top: 100px;
+}
+
 .info {
+    position: relative;
     font-size: 2em;
-    margin-top: 200px;
     width: 100%;
     height: 100%;
     border-color: black;
@@ -60,9 +74,6 @@ body {
     padding-left: 7px;
     color: white;
     padding-top: 5px;
-}
-.next {
-    position:fixed;
 }
 .text {
     font-family: 'Ubuntu';
