--- a/levels/level1.css
+++ b/levels/level1.css
@@ -47,7 +47,12 @@ body {
     width: 100%;
     height: 20%;
     margin-right: 7px;
-    margin-top: -440px;
+    margin-top: -610px;
+}
+
+#right_img {
+    width: 441px;
+    height: 441px;
 }
 
 .dialog_images {
@@ -56,10 +61,10 @@ body {
     padding-left: 100px;
     padding-right: 100px;
 }
-.dialog_images img{
-    width: 80%;
-    height: 80%;
-    margin-top: 100px;
+
+.dialog_images img {
+    margin-top: 110px;
+    
 }
 
 .info {
@@ -73,7 +78,6 @@ body {
     background-color: rgba(0, 0, 0, 0.3);
     padding-left: 7px;
     color: white;
-    padding-top: 5px;
 }
 .text {
     font-family: 'Ubuntu';
