--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@
   }
 
 .button1 {
-    width: 175px;
-    height:55px;
+    width: 100px;
+    height:50px;
     background-color: #4CAF50;
-    background-image: url("images/start.jpg");
+    background-image: url("images/start.png");
     background-size: 400%;
     background-size: contain;
 }  
